# wasm-plugin-system

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  wasm.rs
host/: Cargo.toml
host/src/: ctx.rs  main.rs  plugin.rs
plugin/: Cargo.toml
plugin-macros/: Cargo.toml
plugin/src/: main.rs
