[package]
name = "host"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
uuid = { version = "0.8.1", features = ["v4"] }
wasmer-runtime = "0.16.2"
wasmer-wasi = "0.16.2"
wasmer-runtime-core = "0.16.2"
